feature | update chrome extension

--- a/browser-extensions/chrome/src/index.html
+++ b/browser-extensions/chrome/src/index.html
@@ -18,14 +18,14 @@
         <h2>Add a Quicklink</h2>
         <div class="input-container">
             <label for="link-name">Quicklink Name</label>
-            <input name="link-name" placeholder="your-link-name-here">
+            <input id="link-name" name="link-name" placeholder="your-link-name-here">
         </div>
         <div class="input-container">
             <label for="current-url">Current URL</label>
             <input id="current-url" name="current-url" placeholder="url" disabled>
         </div>
         <div class="actions">
-            <button>Save Quicklink</button>
+            <button id="save-quicklink">Save Quicklink</button>
             <a class="help-link" href="https://github.com/4shub/quicklinks/issues">Report an Issue</a>
         </div>
     </main>
