work on server functionality

--- a/browser-extensions/chrome/src/index.html
+++ b/browser-extensions/chrome/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <script src="index.js"></script>
 <link href="index.css" rel="stylesheet">
-<div class="modal center-text" id="not-connected">
+<div class="modal center-items" id="not-connected">
     <div class="alert-icon">!</div>
     <h3>Your Quicklinks server is not on!</h3>
     <p>Turn it on by enterering the command below in your terminal</p>
