--- a/browser-extensions/src/index.html
+++ b/browser-extensions/src/index.html
@@ -7,7 +7,13 @@
     <p>Turn it on by enterering the command below in your terminal</p>
     <code>sudo ql --start-server</code>
     <p>
-        <a href="https://github.com/4shub/quicklinks/blob/master/SERVER.md#notes" class="help-link">Why do I need to turn on a server?</a>
+        <a
+            target="_blank"
+            href="https://github.com/4shub/quicklinks/blob/master/docs/SERVER.md#notes"
+            class="help-link"
+        >
+            Why do I need to turn on a server?
+        </a>
     </p>
 </div>
 <div class="modal" id="connected">
