--- a/site/index.html
+++ b/site/index.html
@@ -47,10 +47,10 @@
                     controls
                     poster="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                 >
-                    <source src="../assets/demo.mp4" type="video/mp4">
-                    <source src="../assets/demo.webm" type="video/webm">
+                    <source src="assets/demo.mp4" type="video/mp4">
+                    <source src="assets/demo.webm" type="video/webm">
                     <p>Your browser doesn't support HTML5 video. Here is
-                        a <a href="../assets/demo.mp4">link to the video</a> instead.</p>
+                        a <a href="assets/demo.mp4">link to the video</a> instead.</p>
                 </video>
             </div>
             <h2>
