--- a/site/index.html
+++ b/site/index.html
@@ -92,8 +92,11 @@
     </body>
     <script>
         (function () {
-            if (navigator.doNotTrack) {
-                return;
+            /** Do not track settings **/
+            if (window.doNotTrack || navigator.doNotTrack || navigator.msDoNotTrack || 'msTrackingProtectionEnabled' in window.external) {
+                if (window.doNotTrack === '1' || navigator.doNotTrack === 'yes' || navigator.doNotTrack == '1' || navigator.msDoNotTrack == '1' || window.external.msTrackingProtectionEnabled()) {
+                    return;
+                }
             }
 
             (function(f, a, t, h, o, m){
