upgrade to https

--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="Quicklinks" />
         <meta property="og:type" content="article" />
-        <meta property="og:url" content="http://quicklinks.shub.club/" />
+        <meta property="og:url" content="https://quicklinks.shub.club/" />
         <meta property="og:image" content="TBA" />
         <meta property="og:description" content="Quicklinks is a tool that gives you the power to create custom shortcuts for urls and quickly navigate to them from your terminal" />
         <meta property="og:site_name" content="Quicklinks" />
@@ -26,7 +26,7 @@
         <meta name="twitter:creator" content="@4shub">
 
 
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
         <link href="index.css" rel="stylesheet">
     </head>
     <body>
