migrate to http.server

--- a/browser-extensions/src/index.html
+++ b/browser-extensions/src/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="input-container">
             <label for="current-url">Current URL</label>
-            <input id="current-url" name="current-url" placeholder="url" disabled>
+            <input id="current-url" name="current-url" placeholder="url">
         </div>
         <div class="actions">
             <button id="save-quicklink">Save Quicklink</button>
