--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
         <main>
             <div id="demo-video-container" class="demo-video--container applyShadow">
                 <div id="demo-play-container" class="applyShadow thickWhiteBorder demo-video--play-button--container hideOnNoScript">
-                    <div tabindex="1" id="demo-play-button" class="demo-video--play-button"></div>
+                    <div tabindex="0" id="demo-play-button" class="demo-video--play-button"></div>
                     <div class="demo-video--filename">demo.mp4</div>
                 </div>
                 <video
@@ -67,7 +67,7 @@
             <h2>
                 <span class="bold">Quicklinks</span> is a terminal command that allows you to create aliases for urls and quickly navigate to them
             </h2>
-            <ol>
+            <ol class="instruction-list">
                 <li>
                     <label for="initial-installation-instructions" class="instruction">Install the Tool</label>
                     <div class="terminal code applyShadow">
@@ -101,13 +101,13 @@
         </main>
         <footer>
             <menu>
-                <ol>
-                    <ul>Shubham Naik &copy; 2019</ul>
-                    <ul><a href="https://shub.club">shub.club</a></ul>
-                    <ul><a href="https://github.com/4shub/quicklinks/issues">feedback</a></ul>
-                    <ul><a href="https://github.com/4shub/quicklinks">contribute</a></ul>
-                    <ul><a href="https://pypi.org/project/quicklinks/">v0.1.2</a></ul>
-                </ol>
+                <ul>
+                    <li>Shubham Naik &copy; 2019</li>
+                    <li><a href="https://shub.club">shub.club</a></li>
+                    <li><a href="https://github.com/4shub/quicklinks/issues">feedback</a></li>
+                    <li><a href="https://github.com/4shub/quicklinks">contribute</a></li>
+                    <li><a href="https://pypi.org/project/quicklinks/">v0.1.2</a></li>
+                </ul>
             </menu>
         </footer>
     </body>
