add http to urls with no specified endpoint

--- a/browser-extensions/src/index.html
+++ b/browser-extensions/src/index.html
@@ -5,7 +5,7 @@
     <div class="alert-icon">!</div>
     <h3>Your Quicklinks server is not on!</h3>
     <p>Turn it on by enterering the command below in your terminal</p>
-    <code>sudo ql --start-server</code>
+    <code>ql --start-server</code>
     <p>
         <a
             target="_blank"
